--- a/demo/src/main/resources/templates/productos.html
+++ b/demo/src/main/resources/templates/productos.html
@@ -406,7 +406,7 @@
             <button class="nav-button active">Productos</button>
             <button onclick="location.href='/Proveedores'" class="nav-button">Proveedores</button>
             <button onclick="location.href='/Pedidos'" class="nav-button">Pedidos</button>
-            <button class="nav-button">Transacciones</button>
+            <button onclick="location.href='/Transacciones'" class="nav-button">Transacciones</button>
             <button class="nav-button">Informes</button>
         </aside>
         <main>
